# filemanager

./: Cargo.toml  README.md
expr/: c.txt
src/: main.rs  utilities.rs
src/commands/: copy_file.rs  create_directory.rs  delete_file.rs  mod.rs  move_file.rs  properties.rs  rename_file.rs
