[package]
name = "filemanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"]}
file-format = "0.24.0"
simple-error = "0.3.0"
walkdir = "2.5.0"
